Properly handle PCU_REENABLE in fpu_state_load. Hint from Nick Hudson. This seems to help PR port-alpha/48782 a lot.